--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=NukhbaHire
+
+databaseName = dev-nukhbahire
+databaseCluster = syedbasit-ccms.pzv0u3f.mongodb.net
+databaseUser = ${dbUser}
+databasePassword = ${dbPassword}
